# gtfs-realtime-archiver

./: .dockerignore  .editorconfig  .env.example  .gitignore  .tool-versions  Containerfile.dagster  DESIGN.md  Dockerfile  README.md  agencies.example.yaml  agencies.yaml  docker-compose.yml  feeds.example.yaml  inventory.example.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-agency.md  deploy-agencies.md
.claude/skills/release/: SKILL.md
.dagster_home/: .gitignore
.github/workflows/: build.yaml  ci.yaml  claude-code-review.yml  deploy.yaml  pages.yaml
data/: .gitignore
deploy/: dagster.yaml  workspace.yaml
scripts/: populate_feed_partitions.py
site/: CNAME  app.js  index.html  style.css
src/dagster_pipeline/defs/: __init__.py  partitions.py  schedules.py  sensors.py
src/dagster_pipeline/defs/assets/: __init__.py  compaction.py  feeds_metadata.py  inventory.py  schedule.py  schemas.py
src/dagster_pipeline/defs/resources/: __init__.py  gcs.py  secret_manager.py
src/gtfs_rt_archiver/: __init__.py  __main__.py  config.py  fetcher.py  health.py  logging.py  metrics.py  models.py  scheduler.py  secrets.py  storage.py
tests/: conftest.py  test_config.py  test_fetcher.py  test_health.py  test_main.py  test_models.py  test_scheduler.py  test_secrets.py  test_storage.py
tests/dagster/: __init__.py  conftest.py  test_compaction.py  test_partitions.py
tf/: apis.tf  artifact_registry.tf  bigquery.tf  cloudsql.tf  dagster.tf  dagster_iam.tf  dns.tf  iam.tf  main.tf  outputs.tf  storage.tf  tags.tf  variables.tf  versions.tf  wif.tf
tf/modules/dagster/: code_server.tf  daemon.tf  iam.tf  main.tf  outputs.tf  run_worker.tf  secrets.tf  variables.tf  versions.tf  webserver.tf
tf/modules/dagster/config/: dagster.yaml.tftpl  workspace.yaml.tftpl
