[project]
name = "gtfs-rt-archiver"
version = "0.1.0"
description = "A lightweight, resilient service for archiving GTFS-Realtime feeds to cloud storage"
license = "AGPL-3.0-only"
readme = "README.md"
authors = [
    { name = "Chris Alfano", email = "chris@jarv.us" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=4.0.0a6",
    "gcloud-aio-storage>=9.6.1",
    "httpx>=1.0.dev3",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]

[project.scripts]
gtfs-rt-archiver = "gtfs_rt_archiver:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
