[project]
name = "gtfs-rt-archiver"
version = "0.1.0"
description = "A lightweight, resilient service for archiving GTFS-Realtime feeds to cloud storage"
license = "AGPL-3.0-only"
readme = "README.md"
authors = [
    { name = "Chris Alfano", email = "chris@jarv.us" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gtfs-rt-archiver = "gtfs_rt_archiver:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
# Component-specific groups
archiver = [
    "aiohttp>=3.13.2",
    "apscheduler>=4.0.0a6",
    "gcloud-aio-storage>=9.6.1",
    "google-cloud-secret-manager>=2.26.0",
    "httpx>=0.28.0,<1.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]
dev-archiver = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250915",
]
dagster = [
    "dagster==1.12.8",
    "google-cloud-storage>=3.7.0",
    "gtfs-realtime-bindings>=2.0.0",
    "pyarrow>=22.0.0",
]
dev-dagster = [
    "dagster-webserver",
    "dagster-dg-cli",
]

# Aggregate groups - includes component groups for local dev
dev = [
    { include-group = "archiver" },
    { include-group = "dev-archiver" },
    { include-group = "dagster" },
    { include-group = "dev-dagster" },
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-protobuf>=6.32.1.20251210",
]
# Deployment group - includes dagster base plus deployment-specific deps
dagster-deploy = [
    { include-group = "dagster" },
    "dagster-contrib-gcp>=0.0.9",
    "dagster-gcp>=0.24.0",
    "dagster-postgres>=0.24.0",
    "dagster-webserver>=1.12.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gtfs_rt_archiver", "dagster_pipeline"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "gcloud.*",
    "apscheduler.*",
    "google.cloud.*",
    "google.transit.*",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_pipeline"
registry_modules = [
    "dagster_pipeline.components.*",
]
